Fixed all REST apis and upgraded strongly the course-page
